# phantom

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  API_ADDITIONS.py  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORTEX_COMPLETE.md  CORTEX_QUICKREF.txt  CORTEX_SVELTE_GUIDE.md  CORTEX_TAURI_BACKEND.rs  CORTEX_UI_COMPONENTS.svelte  CORTEX_V2_ARCHITECTURE.md  Dockerfile  FILES_MODIFIED.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUCCESS.md  LICENSE  NIX_PYTHON_GUIDELINES.md  PROJECT_STATE.md  PROJECT_STATUS.md  README.md  RELEASE-v0.1.0.md  REORGANIZATION_PLAN.md  RESOURCES.sh  ROADMAP_MAP.md  SECURITY.md  SENTIMENT_DOCS.md  SESSION_SUMMARY.md  VALIDATION_REPORT.md  VRAM_CALCULATOR.md  ai_analyzer.py  api_endpoints_new.py  cloud_providers.py  cortex.py  cortex_api.py  cortex_demo.sh  (+19 more)
.archive/arch_snapshots/: snapshot-20251214-170517.txt  snapshot-20260110-143905.txt  snapshot-20260110-144012.txt  snapshot-20260401-042725.txt  snapshot-20260426-185420.txt
.archive/dead_code/: MANIFEST.md
.archive/dead_code/phantom_core/: DEPRECATED.md  phantom_classifier.py
.archive/experimental/: README.md
.archive/experimental/tools/: project_auditor.py  vram_calculator.py
.audit/: PROGRESS.md
.audit/decisions/: deps-audit.md
.devcontainer/: devcontainer.json
.github/: codeql.yml  dependabot.yml  documentation.yml  markdown-link-check.json  sbom.yml  security.yml
.github/workflows/: ci-validation.yml  ci.yml  codeql.yml  documentation.yml  metrics.yml  nix-build.yml  nix-check.yml  nix-fmt.yml  release.yml  sbom.yml  secret-scan.yml  security.yml
apps/desktop/: main.py
arch/: ARCHITECTURE-REPORT.json  ARCHITECTURE-REPORT.md  ARCHITECTURE-REPORT.txt  ARCHITECTURE-TREE.md  ARCHITECTURE-TREE.txt  README.md
arch/snapshots/: snapshot-20260110-144056.txt  snapshot-20260110-144416.txt  snapshot-20260419-012102.txt  snapshot-20260426-183803.txt
cortex-desktop/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
cortex-desktop/src/: app.css
cortex-desktop/src-tauri/: Cargo.toml  tauri.conf.json
demo_input/code/: config_loader.py  pipeline.nix  utils.rs
demo_input/configs/: app.env  nginx.conf  private.key
demo_input/data/: metrics.csv  users.json
demo_input/documents/: meeting_notes.txt  project_report.md
docs/: CHANGELOG.md  CORTEX_DESKTOP_SETUP.md  CORTEX_V2_QUICKSTART.md  DEPLOYMENT.md  EXECUTIVE_SUMMARY.md  Makefile  README.md  ROADMAP.md  SPRINT.md  conf.py  index.rst  requirements-docs.txt
docs/architecture/: ARCHITECTURAL_SYNTHESIS.md  CORTEX_V2_ARCHITECTURE.md  project_topology.rst
docs/development/: COMMIT_MESSAGE.md  CORTEX_SVELTE_COMPONENTS.md
docs/guides/: CORTEX_V2_QUICKSTART.md  IMPLEMENTATION_GUIDE.md  ROADMAP.md  VRAM_QUICKSTART.md
docs/history/: CORTEX_README.md  CORTEX_SUMMARY.md  EXECUTIVE_SUMMARY.md  PHASE1_IMPLEMENTATION.md  REORGANIZATION_SUMMARY.md  TEST_RESULTS.md
docs/reference/: CORTEX_UI_COMPONENTS.svelte  taxonomy.txt  vulnix-cortex-desktop-audit.txt
input_data/configs/: .env.production  server.conf
input_data/finance/: quarterly_report.csv  transactions_backup.json
input_data/hr/: contractors.csv  employees_2024.csv
input_data/logs/: chat_history_nov.json  chat_history_oct.json
intelagent/: .gitignore  Cargo.toml  MANIFEST.md  PROJECT_STRUCTURE.md  README.md  test-document.txt
intelagent/crates/audit/: Cargo.toml
intelagent/crates/cli/: Cargo.toml
intelagent/crates/cli/src/: lib.rs
intelagent/crates/core/: Cargo.toml
intelagent/crates/core/src/: agent.rs  context.rs  lib.rs  proof.rs  quality.rs  task.rs  types.rs
intelagent/crates/dao/: Cargo.toml
intelagent/crates/dao/src/: lib.rs
intelagent/crates/governance/: Cargo.toml
intelagent/crates/governance/src/: dao.rs  lib.rs  rewards.rs
intelagent/crates/governance/src/rewards/: lib.rs
intelagent/crates/mcp/: Cargo.toml
intelagent/crates/mcp/src/: lib.rs
intelagent/crates/memory/: Cargo.toml
intelagent/crates/memory/src/: lib.rs
intelagent/crates/privacy/: Cargo.toml
intelagent/crates/privacy/src/: lib.rs
intelagent/crates/quality/: Cargo.toml
intelagent/crates/quality/src/: lib.rs
intelagent/crates/rewards/: Cargo.toml
intelagent/crates/security/: Cargo.toml
intelagent/crates/security/src/: audit.rs  lib.rs
intelagent/crates/security/src/audit/: lib.rs
intelagent/crates/soc/: Cargo.toml  KERNEL.md  README.md  style.css
intelagent/crates/soc/src/: main.rs
intelagent/crates/soc/src/engine/: mod.rs  phantom_agent.rs  phantom_worker.rs
intelagent/crates/soc/src/kernel/: agent_pool.rs  event_bus.rs  metrics.rs  mod.rs  scheduler.rs  task_queue.rs
intelagent/crates/soc/src/ui/: command_palette.rs  log_viewer.rs  mod.rs  soc_layout.rs
intelagent/examples/: basic_agent.rs
nix/: aliases.nix  desktop.nix  module.nix  overlay.nix  package.nix
nix-expert/: .~lock.RESUMO-SKILL.md#
phantom_core/: phantom_classifier.py
scripts/: arch-generator.sh  bootstrap.sh  gcp_setup.sh  generate_placeholders.py  test_cerebro.sh  validate_stack.sh
scripts/completions/: phantom.fish
spectre/: README.md  flake.nix
src/phantom/: __init__.py  logging.py
src/phantom/api/: __init__.py  (+5 more)
tests/: LOG_ANALYSIS_REPORT.md  conftest.py  test_cortex_chunker.py  test_imports.py  test_vector_store.py  validate_just.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api.py  test_api_endpoints.py  test_cli.py
tests/python/: test_components.py  test_cortex.py  test_cortex_api.py  test_cortex_chunker.py  test_sentiment.py
tests/unit/: test_ai_analyzer.py  test_components.py  test_cortex.py  test_cortex_api.py  test_cortex_chunker_full.py  test_embeddings.py  test_judge_api.py  test_knowledge_loader.py  test_latency_optimizer.py  test_metrics_schema.py  test_oracle_explainer.py  test_phantom_dag.py  test_pipeline.py  test_providers.py  test_pseudonym_resolve.py  test_rag_engine.py  test_sentiment.py  test_sentinel.py  test_spectre.py  test_viability_scorer.py
ux-agents/: flake.nix  ux-skill-template.md  ux-spec-mcp-server.ts  workflow-complete.md
(+77 files in other folders)
