[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phantom"
version = "2.0.0"
description = "AI-Powered Document Intelligence & Classification Pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "kernelcore", email = "kernelcore@voidnix.dev" }
]
keywords = [
    "ai",
    "llm",
    "rag",
    "document-processing",
    "nlp",
    "embeddings",
    "classification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0,<3.0",
    "rich>=13.0,<14.0",
    "typer>=0.9,<1.0",

    # Data processing
    "numpy>=1.24,<2.0",

    # NLP & ML
    "sentence-transformers>=2.2,<3.0",
    "tiktoken>=0.5,<1.0",
    "nltk>=3.8,<4.0",
    "scikit-learn>=1.3,<2.0",

    # Embeddings & Vector DB
    "faiss-cpu>=1.7,<2.0",

    # HTTP & API
    "requests>=2.31,<3.0",
    "httpx>=0.24,<1.0",
    "fastapi>=0.100,<1.0",
    "uvicorn>=0.23,<1.0",

    # Observability
    "structlog>=23.0,<26.0",
    "prometheus-client>=0.19,<1.0",

    # Utilities
    "python-magic>=0.4,<1.0",
    "pyyaml>=6.0,<7.0",
    "psutil>=5.9,<6.0",
    "aiofiles>=23.0,<24.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4,<8.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-asyncio>=0.21,<1.0",

    # Code quality
    "ruff>=0.1,<1.0",
    "mypy>=1.5,<2.0",
    "pre-commit>=3.4,<4.0",

    # Security scanning
    "safety>=3.0,<4.0",
    "pip-audit>=2.6,<3.0",
]
gpu = [
    "torch>=2.0",
    "faiss-gpu>=1.7",
]
all = [
    "phantom[dev]",
    "phantom[gpu]",
]

[project.scripts]
phantom = "phantom.cli.main:app"
phantom-api = "phantom.api.app:serve"

[project.urls]
Homepage = "https://github.com/kernelcore/phantom"
Documentation = "https://github.com/kernelcore/phantom/docs"
Repository = "https://github.com/kernelcore/phantom"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["phantom"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["phantom"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "phantom.*"
ignore_missing_imports = true
