[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/mcp",
    "crates/quality",
    "crates/memory",
    "crates/rewards",
    "crates/privacy",
    "crates/dao",
    "crates/audit",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["kernelcore <kernelcore@voidnix.dev>"]
repository = "https://github.com/kernelcore/intelagent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto
blake3 = "1.5"
ed25519-dalek = "2.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client (for MCP, DAO interaction)
reqwest = { version = "0.11", features = ["json"] }

# Database (for audit trail)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Testing
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
