[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/mcp",
    "crates/quality",
    "crates/memory",
    "crates/security",
    "crates/governance",
    "crates/cli",
    "crates/soc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["kernelcore <kernelcore@voidnix.dev>"]
repository = "https://github.com/kernelcore/intelagent"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
blake3 = "1.5"
ed25519-dalek = "2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
