[package]
name = "intelagent-soc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace deps
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

# GTK4 dependencies
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }

# Async GTK
glib = "0.21"

# Process execution
which = "7.0"

# Phantom integration (tight coupling)
# TODO: Add phantom crate when it's published or use path dependency
# phantom = { path = "../../../" }

[build-dependencies]
# For GTK resources compilation if needed
